# pace-2019

./: .gitignore  INSTALL.md  README.md  SConscript  SConstruct  akibaGraphconverter.py  compile.sh  metisGraphConverter.py  run_alg.py  run_all  run_graph  run_parallel.sh  run_parallel_clique.sh
app/: configuration_mis.h  exactVC.cpp  kernelizeAndMakeCliqueInstance.cpp  parse_parameters.h  reduction_evomis.cpp  vc_solver.cpp
lib/mis/: exact_mis.cpp  exact_mis.h
lib/mis/darren/: Algorithm.cpp  Algorithm.h  ArraySet.h  BiDoubleGraph.cpp  BiDoubleGraph.h  CliqueTools.cpp  CliqueTools.h  ColoringStrategy.h  Experiments.cpp  Experiments.h  GraphTools.cpp  GraphTools.h  IndependentSetColoringStrategy.cpp  IndependentSetColoringStrategy.h  Isolates4.cpp  Isolates4.h  LightWeightFullMISS.cpp  LightWeightFullMISS.h  LightWeightMISQ.cpp  LightWeightMISQ.h  LightWeightMISR.cpp  LightWeightMISR.h  LightWeightStaticOrderMISS.cpp  LightWeightStaticOrderMISS.h  MatchingTools.cpp  MatchingTools.h  MaxSubgraphAlgorithm.cpp  MaxSubgraphAlgorithm.h  MemoryManager.h  OrderingTools.cpp  OrderingTools.h  Reduction.h  Set.h  SparseArraySet.h  SparseIndependentSetColoringStrategy.cpp  SparseIndependentSetColoringStrategy.h  Tools.cpp  Tools.h
lib/mis/kernel/: branch_and_reduce_algorithm.cpp  branch_and_reduce_algorithm.h
lib/mis/kernel/ParFastKer/LinearTime/MIS_sigmod_pub/: .cproject  .project  Graph.cpp  Graph.h  Utility.cpp  Utility.h  benchmark-missing.sh  benchmark.sh  main.cpp  makefile  mis  run.sh
lib/mis/kernel/ParFastKer/fast_reductions/: CMakeLists.txt  README.md  TAGS
lib/mis/kernel/ParFastKer/fast_reductions/src/: #parallel_reductions.cpp#  ArraySet.h  MaximumMatching.cpp  MaximumMatching.h  ProfilingHelper.h  Reduction.h  SimpleSet.h  SparseArraySet.h  full_reductions.cpp  full_reductions.h  parallel_reductions.cpp  parallel_reductions.h  parse_parameters.h
lib/mis/kernel/ParFastKer/fast_reductions/src/sequential/: branch_and_reduce_algorithm.cpp  branch_and_reduce_algorithm.h
lib/parallel_social_partitioning_package/: build_reps.sh  build_reps.sh~
lib/parallel_social_partitioning_package/modKaHIP/: SConscript  SConstruct
lib/parallel_social_partitioning_package/modKaHIP/.sconf_temp/: conftest_0  conftest_0.cpp  conftest_1.cpp
lib/parallel_social_partitioning_package/modKaHIP/interface/: kaHIP_interface.cpp
lib/parallel_social_partitioning_package/modKaHIP/lib/parallel_mh/: parallel_mh_async.cpp  parallel_mh_async.h
lib/parallel_social_partitioning_package/modKaHIP/lib/partition/: partition_config.h
lib/parallel_social_partitioning_package/parallel_social_partitioning/.svn/: all-wcprops  entries
lib/parallel_social_partitioning_package/parallel_social_partitioning/.svn/text-base/: TODOs.svn-base
lib/parallel_social_partitioning_package/parallel_social_partitioning/src/: SConscript  SConstruct  updateTags.sh
lib/parallel_social_partitioning_package/parallel_social_partitioning/src/app/: configuration.h  edge_list_to_metis_graph.cpp  generate_kronecker.cpp  generate_rgg.cpp  graph2dgf.cpp  parallel_label_compress.cpp  parallel_label_compress.cpp~  parallel_label_compress_reps.cpp  parmetis_driver.cpp  parse_parameters.h  readdgf.cpp  yahoo_to_metis.cpp
lib/parallel_social_partitioning_package/parallel_social_partitioning/src/lib/: definitions.h  partition_config.h
lib/parallel_social_partitioning_package/parallel_social_partitioning/src/lib/communication/: dummy_operations.cpp  mpi_tools.cpp  mpi_tools.h
lib/parallel_social_partitioning_package/parallel_social_partitioning/src/lib/data_structure/: balance_management_refinement.cpp  balance_management_refinement.h  hashed_graph.h  linear_probing_hashmap.h  parallel_graph_access.cpp  parallel_graph_access.h
lib/tools/: CliqueInstanceWriter.h  CliqueSolverAdapter.h  PACE_graph_reader.h  PACE_solution_writer.h  mis_log.cpp  mis_log.h
report/: csc_submission.aux  csc_submission.bbl  csc_submission.blg  csc_submission.tex  ltexpprt.tex  p05-schulz.aux  p05-schulz.bbl  p05-schulz.bib  p05-schulz.blg  p05-schulz.txt  p05-schulz.vtc  pace_submission.aux  pace_submission.bbl  pace_submission.blg  pace_submission.tex  pace_submission.vtc  references.bib  runningtime_table_data  runningtime_table_data_lessprecision  runningtime_table_data_raw  runningtime_table_data_raw_new
report/arxiv/: .report.tex.swp  changes.sty  ltexpprt.sty  references.bib  report.tex
report/arxiv/plots/: eval.py  rt_density.pgf  rt_solutions.pgf
report/plots/: eval.py  rt_density.pgf  rt_solutions.pgf
scripts/: cliqueGraphConverter.py  compileClique.sh  dimacsGraphConverter.py  maketable.py  metisGraphConverter.py  metisGraphConverterWeighted.py  runClique.sh
(+37 files in other folders)
